<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activity.SignUp">

    <ImageView
        android:id="@+id/imageView"
        app:srcCompat="@drawable/signup"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/Name"
        android:layout_below="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/enter_name"
        android:textSize="15sp"
        android:inputType="text"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:autofillHints="true" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_below="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/enter_email"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:autofillHints="true" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/create_password"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/edt_email"
        android:layout_marginStart="20dp"
        android:autofillHints="true" />

    <EditText
        android:id="@+id/edtRegPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/edt_pass"
        android:layout_marginStart="20dp"
        android:autofillHints="true" />

    <RadioGroup
        android:id="@+id/edtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/edtRegPassword2"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/edtradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginTop="30dp"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="625dp" />
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginTop="30dp"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="625dp" />

    </RadioGroup>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/edtGender"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="15sp"
        />
    <Button
        android:id="@+id/btnSignIn2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_rounded"
        android:layout_below="@id/btnSignUp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="15sp"
        />
</RelativeLayout>