<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activity.SignUp"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/login"
        android:contentDescription="@string/todo" />

    <EditText
        android:layout_below="@+id/imageView"
        android:id="@+id/SI_edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:autofillHints="true" />

    <EditText
        android:id="@+id/SI_edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/SI_edt_email"
        android:layout_marginStart="20dp"
        android:autofillHints="true" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SI_edt_pass"
        android:text="@string/sign_in"
        android:textSize="15sp"
        android:layout_margin="80dp"
        android:background="@drawable/button_rounded"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="50dp"
        android:layout_marginTop="20dp"

        />


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignIn"
        android:text="@string/sign_up"
        android:background="@drawable/button_rounded"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="50dp"
        />
</RelativeLayout>